--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/express": "^4.17.21",
     "@types/express-fileupload": "^1.5.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
     "typescript": "^5.4.3"
   },
@@ -31,6 +33,8 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
     "winston": "^3.12.0"
   }
