--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
+    "@types/xlsx-populate": "git+https://github.com/JanLoebel/types-xlsx-populate.git",
     "typescript": "^5.4.3"
   },
   "dependencies": {
@@ -36,6 +37,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
-    "winston": "^3.12.0"
+    "winston": "^3.12.0",
+    "xlsx-populate": "^1.21.0"
   }
 }
