--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.21",
     "@types/express-fileupload": "^1.5.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mapbox__mapbox-sdk": "^0.14.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
@@ -24,6 +25,7 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.15.5",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
