--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,22 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
 
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin4_container
+    restart: always
+    ports:
+      - 5050:80
+    networks:
+      - api-events
+    environment:
+      PGADMIN_DEFAULT_EMAIL: test@coordinadora.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+
   app:
     build:
       context: .
-      target: prod
+      target: ${NODE_ENV}
       dockerfile: Dockerfile
 
     volumes:
