documentation up api add

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,16 @@
+
+NODE_ENV=prod
+PORT= 3000
+
+#Database
 DATABASE_NAME = events-db
 DATABASE_USER = postgres
 DATABASE_PASSWORD = postgres
 DATABASE_HOST = localhost
 DATABASE_PORT = 5432
+
+#JWT
+SECRET_OR_PRIVATE_KEY = esteEsmiSecretKey
+
+#MAPBOX
+MAPBOX_ACCESS_TOKEN = "generar tus tokens de mapbox"
